# mapaly

./: .gitignore  Dockerfile  Dockerfile.js.ci  Dockerfile.py.ci  JavaScriptCI.dockerfile  PythonCI.dockerfile  README.md  docker-compose.ci.yml  docker-compose.test.yml  docker-compose.yml  gendatawizard.py  manage.py  nginx.conf  pyproject.toml  requirements.txt  spain_provincia.geojson  start.sh  uploadwizarddata.py
.github/workflows/: push.yml
editor/: forms.py  tests.py  upload.py  views.py
editor/templates/editor/: dashboard.html  delete.html  editor.html  new.html
images/: django-test.dockerfile  django.dockerfile  intermap-test.dockerfile  intermap.dockerfile  test-e2e.dockerfile
intermap/: Dockerfile  Test.dockerfile  index.ts  main.css  nginx.conf  package-lock.json  package.json  tsconfig.json  webpack.config.js
intermap/src/: dialog.ts  models.test.ts  models.ts  sound.ts  store.test.ts  store.ts  style.ts
mapaly/: asgi.py  settings.py  testing.py  urls.py  wsgi.py
mapaly/static/: fonts.css  main.css  mapaquiz.webmanifest  service-worker.js
mapaly/static/mapaly/: index.js  (+2 more)
mapaly/templates/: base.html
quiz/: admin.py  api.py  models.py  serializers.py  tests.py  views.py
quiz/migrations/: 0001_initial.py  0002_quiz_map.py  0003_quiz_slug.py  0004_auto_20200420_2019.py  0005_auto_20200829_1515.py  0006_quiz_front_image.py  0007_quiz_top.py  0008_auto_20200922_1909.py  0009_quiz_language.py  0010_auto_20201012_1456.py  0011_auto_20201013_2109.py
score/: admin.py  api.py  models.py  serializers.py
score/migrations/: 0001_initial.py  0002_score_time.py
test/: README.md  test.db
text/: apps.py  views.py
text/pages/: africa.html  america.html  asia.html  europe.html  oceania.html
users/: forms.py  tests.py  views.py
utils/: antimeridian.py
wizard/: apps.py  views.py
wizard/static/: wizard.css  wizard.js
(+14 files in other folders)
