[tool.poetry]
name = "mapaly"
version = "0.1.0"
description = ""
authors = ["Adrián Arroyo Calle <adrian.arroyocalle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.0.5"
djangorestframework = "^3.11.0"
uwsgi = "^2.0.18"
azure-storage-blob = "^12.5.0"
lunr = {extras = ["languages"], version = "^0.5.8"}

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
mypy = "^0.782"
selenium = "^3.141.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
